Fix spacing

--- a/index.css
+++ b/index.css
@@ -8,5 +8,5 @@
 }
 
 #page-index .super-content {
-    padding-top: 300px !important;
+    padding-top: 50px !important;
 }
